# gemini_mcp

./: .gitignore  README.md  README_EN.md  acp-boundary.md  gemini-sandbox.md  pyproject.toml
.claude/: CLAUDE.md
.claude/rules/: mcp-agents.md
src/geminimcp/: __init__.py  cli.py  server.py
